Fix heart bug on iOS

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,5 +1,4 @@
 .footer {
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,6 +16,7 @@
   }
 
   a {
+    position: relative;
     width: 42vh;
     padding: 15vh 0;
   }
@@ -24,19 +24,18 @@
 
 .love {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 3vh;
+  left: 0;
   z-index: -1;
   display: block;
   width: 42vh;
-  transform: translate(-50%, -46%);
   transform-origin: 50% 50%;
   animation: love 0.7s infinite alternate;
 }
 
 @keyframes love {
   100% {
-    transform: translate(-50%, -46%) scale(1.03, 1.03);
+    transform: scale(1.03, 1.03);
   }
 }
 
